--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ Builds/VisualStudio2012/open-ephys.suo
 Builds/VisualStudio2012/open-ephys.v11.suo
 Builds/VisualStudio2012/open-ephys.vcxproj.user
 Builds/VisualStudio2012/windowState.xml
+Builds/VisualStudio2012/pipetest.bit
