--- a/Builds/VisualStudio2010/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj.filters
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
+
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="open-ephys">
@@ -63,6 +64,177 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Resources\Fonts\BebasNeue.otf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\cpmono_bold.otf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\cpmono_extra_light.otf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\cpmono_light.otf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\cpmono_plain.otf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\miso-bold.ttf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\miso-light.ttf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\miso-regular.ttf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\miso-serialized">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\nordic.ttf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\ostrich.ttf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\silkscreen-serialized">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\silkscreen.ttf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\unibody-8.otf">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\ArduinoIcon.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\OpenEphysBoardLogoBlack.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\OpenEphysBoardLogoGray.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-01.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-02.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-03.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-04.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons-05.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-01.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-02.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-03.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-04.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_neutral-05.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-01.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-02.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-03.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-04.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected-05.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-01.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-02.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-03.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-04.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\RadioButtons_selected_over-05.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\noise_wave.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\saw_wave.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\sine_wave.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\square_wave.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\triangle_wave.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\wifi.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\SourceDrop.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\DefaultDataSource.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\FileReaderIcon.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Icons\IntanIcon.png">
+      <Filter>open-ephys\Resources\Images\Icons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\muteoff.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\muteon.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\MergerA-01.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\MergerA-02.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\MergerB-01.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\MergerB-02.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\PipelineA-01.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\PipelineA-02.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\PipelineB-01.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Images\Buttons\PipelineB-02.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\AccessClass.cpp">
       <Filter>open-ephys\Source</Filter>
     </ClCompile>
@@ -122,6 +294,24 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Audio\AudioComponent.cpp">
       <Filter>open-ephys\Source\Audio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\Channel.cpp">
+      <Filter>open-ephys\Source\Processors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\Serial\ofArduino.cpp">
+      <Filter>open-ephys\Source\Processors\Serial</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\Serial\ofSerial.cpp">
+      <Filter>open-ephys\Source\Processors\Serial</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\EventDetector.cpp">
+      <Filter>open-ephys\Source\Processors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\FPGAOutput.cpp">
+      <Filter>open-ephys\Source\Processors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\ArduinoOutput.cpp">
+      <Filter>open-ephys\Source\Processors</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\Processors\Parameter.cpp">
       <Filter>open-ephys\Source\Processors</Filter>
@@ -330,21 +520,6 @@
     <ClCompile Include="..\..\JuceLibraryCode\JuceLibraryCode4.cpp">
       <Filter>Juce Library Code</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Source\Processors\ArduinoOutput.cpp">
-      <Filter>open-ephys\Source\Processors</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Source\Processors\Serial\ofArduino.cpp">
-      <Filter>open-ephys\Source\Processors\Serial</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Source\Processors\Serial\ofSerial.cpp">
-      <Filter>open-ephys\Source\Processors\Serial</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Source\Processors\EventDetector.cpp">
-      <Filter>open-ephys\Source\Processors</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Source\Processors\FPGAOutput.cpp">
-      <Filter>open-ephys\Source\Processors</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\AccessClass.h">
@@ -424,6 +599,27 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Audio\AudioComponent.h">
       <Filter>open-ephys\Source\Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\Channel.h">
+      <Filter>open-ephys\Source\Processors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\Serial\ofArduino.h">
+      <Filter>open-ephys\Source\Processors\Serial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\Serial\ofConstants.h">
+      <Filter>open-ephys\Source\Processors\Serial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\Serial\ofSerial.h">
+      <Filter>open-ephys\Source\Processors\Serial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\EventDetector.h">
+      <Filter>open-ephys\Source\Processors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\FPGAOutput.h">
+      <Filter>open-ephys\Source\Processors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\ArduinoOutput.h">
+      <Filter>open-ephys\Source\Processors</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Processors\Parameter.h">
       <Filter>open-ephys\Source\Processors</Filter>
@@ -628,24 +824,6 @@
     </ClInclude>
     <ClInclude Include="..\..\JuceLibraryCode\BinaryData.h">
       <Filter>Juce Library Code</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Source\Processors\ArduinoOutput.h">
-      <Filter>open-ephys\Source\Processors</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Source\Processors\Serial\ofArduino.h">
-      <Filter>open-ephys\Source\Processors\Serial</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Source\Processors\Serial\ofConstants.h">
-      <Filter>open-ephys\Source\Processors\Serial</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Source\Processors\Serial\ofSerial.h">
-      <Filter>open-ephys\Source\Processors\Serial</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Source\Processors\EventDetector.h">
-      <Filter>open-ephys\Source\Processors</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Source\Processors\FPGAOutput.h">
-      <Filter>open-ephys\Source\Processors</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
