Added event-controlled recording processor

--- a/Builds/VisualStudio2010/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj.filters
@@ -331,6 +331,9 @@
     <ClCompile Include="..\..\Source\Processors\LfpDisplayNode.cpp">
       <Filter>open-ephys\Source\Processors</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\Utilities\RecordControl.cpp">
+      <Filter>open-ephys\Source\Processors\Utilities</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\Processors\Utilities\Merger.cpp">
       <Filter>open-ephys\Source\Processors\Utilities</Filter>
     </ClCompile>
@@ -378,6 +381,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Processors\EventNode.cpp">
       <Filter>open-ephys\Source\Processors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\Editors\RecordControlEditor.cpp">
+      <Filter>open-ephys\Source\Processors\Editors</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\Processors\Editors\ResamplingNodeEditor.cpp">
       <Filter>open-ephys\Source\Processors\Editors</Filter>
@@ -648,6 +654,9 @@
     <ClInclude Include="..\..\Source\Processors\LfpDisplayNode.h">
       <Filter>open-ephys\Source\Processors</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\Utilities\RecordControl.h">
+      <Filter>open-ephys\Source\Processors\Utilities</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\Processors\Utilities\Merger.h">
       <Filter>open-ephys\Source\Processors\Utilities</Filter>
     </ClInclude>
@@ -701,6 +710,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Processors\EventNode.h">
       <Filter>open-ephys\Source\Processors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\Editors\RecordControlEditor.h">
+      <Filter>open-ephys\Source\Processors\Editors</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Processors\Editors\ResamplingNodeEditor.h">
       <Filter>open-ephys\Source\Processors\Editors</Filter>
