--- a/Builds/VisualStudio2010/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj.filters
@@ -64,6 +64,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Resources\Fonts\cpmono-black-serialized">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\cpmono-bold-serialized">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\cpmono-extralight-serialized">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\cpmono-light-serialized">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Resources\Fonts\cpmono-plain-serialized">
+      <Filter>open-ephys\Resources\Fonts</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Resources\Fonts\BebasNeue.otf">
       <Filter>open-ephys\Resources\Fonts</Filter>
     </ClCompile>
