--- a/Builds/VisualStudio2010/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj.filters
@@ -334,6 +334,9 @@
     <ClCompile Include="..\..\Source\Processors\LfpDisplayNode.cpp">
       <Filter>open-ephys\Source\Processors</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\Utilities\RecordControl.cpp">
+      <Filter>open-ephys\Source\Processors\Utilities</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\Processors\Utilities\Merger.cpp">
       <Filter>open-ephys\Source\Processors\Utilities</Filter>
     </ClCompile>
@@ -381,6 +384,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Processors\EventNode.cpp">
       <Filter>open-ephys\Source\Processors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\Editors\RecordControlEditor.cpp">
+      <Filter>open-ephys\Source\Processors\Editors</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\Processors\Editors\ReferenceNodeEditor.cpp">
       <Filter>open-ephys\Source\Processors\Editors</Filter>
@@ -657,6 +663,9 @@
     <ClInclude Include="..\..\Source\Processors\LfpDisplayNode.h">
       <Filter>open-ephys\Source\Processors</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\Utilities\RecordControl.h">
+      <Filter>open-ephys\Source\Processors\Utilities</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\Processors\Utilities\Merger.h">
       <Filter>open-ephys\Source\Processors\Utilities</Filter>
     </ClInclude>
@@ -710,6 +719,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Processors\EventNode.h">
       <Filter>open-ephys\Source\Processors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\Editors\RecordControlEditor.h">
+      <Filter>open-ephys\Source\Processors\Editors</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Processors\Editors\ReferenceNodeEditor.h">
       <Filter>open-ephys\Source\Processors\Editors</Filter>
