Add cscope files to .gitignore.
Ignoring these allows running cscope-indexer without git status
complaining.

Signed-off-by: Marti Bolivar <mbolivar@leaflabs.com>

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ Builds/VisualStudio2012/pipetest.bit
 
 # 5. Miscellanous generated files (Doxygen, etc.)
 Source/Docs/*
+
+# 6. IDE and code analyzer cruft
+cscope.files
+cscope.out
