--- a/Builds/VisualStudio2010/open-ephys.vcxproj
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj
@@ -193,8 +193,12 @@
     <ClCompile Include="..\..\Source\Processors\Editors\AudioEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Editors\FilterEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Editors\GenericEditor.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\rhythm-api\okFrontPanelDLL.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\rhythm-api\rhd2000datablock.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\rhythm-api\rhd2000evalboard.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\rhythm-api\rhd2000registers.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\RHD2000Thread.cpp"/>
     <ClCompile Include="..\..\Source\Processors\DataThreads\FileReaderThread.cpp"/>
-    <ClCompile Include="..\..\Source\Processors\DataThreads\okFrontPanelDLL.cpp"/>
     <ClCompile Include="..\..\Source\Processors\DataThreads\FPGAThread.cpp"/>
     <ClCompile Include="..\..\Source\Processors\DataThreads\DataBuffer.cpp"/>
     <ClCompile Include="..\..\Source\Processors\DataThreads\IntanThread.cpp"/>
@@ -305,8 +309,12 @@
     <ClInclude Include="..\..\Source\Processors\Editors\AudioEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\Editors\FilterEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\Editors\GenericEditor.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\rhythm-api\okFrontPanelDLL.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\rhythm-api\rhd2000datablock.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\rhythm-api\rhd2000evalboard.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\rhythm-api\rhd2000registers.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\RHD2000Thread.h"/>
     <ClInclude Include="..\..\Source\Processors\DataThreads\FileReaderThread.h"/>
-    <ClInclude Include="..\..\Source\Processors\DataThreads\okFrontPanelDLL.h"/>
     <ClInclude Include="..\..\Source\Processors\DataThreads\FPGAThread.h"/>
     <ClInclude Include="..\..\Source\Processors\DataThreads\DataBuffer.h"/>
     <ClInclude Include="..\..\Source\Processors\DataThreads\IntanThread.h"/>
